added logged in message

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,6 +4,6 @@
     <title>Node.JS Authentication Examples</title>
   </head>
   <body>
-    Hello World
+    You are now logged in!
   </body>
 </html>
