cleanup spelling and whitespace

--- a/views/error/unauthorized.html
+++ b/views/error/unauthorized.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Node.JS Authentication Examples</title>
+    <title>Node.JS Authentication Example</title>
   </head>
   <body>
     Sorry, You are Not Authorized To View This Content
