--- a/views/landing.html
+++ b/views/landing.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Node.JS Authentication Examples</title>
+    <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    Hello World
+    Welcome to the Node.js Authentication Example
+
+    <div><a href="/login">Login</a></div>
+    <div><a href="/register">Register</a></div>
+    <div><a href="/logout">Logout</a></div>
+
   </body>
 </html>
