--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Node.JS Authentication Examples</title>
+    <title>Node.JS Authentication Example</title>
   </head>
   <body>
     You are now logged in!
