--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Node.JS Authentication Examples</title>
+    <title>Node.JS Authentication Example</title>
   </head>
   <body>
     <form action="/login" method="post">
