--- a/views/landing.html
+++ b/views/landing.html
@@ -9,6 +9,7 @@
     <div><a href="/login">Login</a></div>
     <div><a href="/register">Register</a></div>
     <div><a href="/logout">Logout</a></div>
+    <div><a href="/dashboard">Dashboard</a></div>
 
   </body>
 </html>
