added better messaging in views

--- a/views/error/internal.html
+++ b/views/error/internal.html
@@ -4,6 +4,6 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    Internal Server Error
+    Internal Server Error -- We'll try to fix this.
   </body>
 </html>
