--- a/views/error/unauthorized.html
+++ b/views/error/unauthorized.html
@@ -4,6 +4,6 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    Sorry, You are Not Authorized To View This Content
+    Sorry, you are not authorized to view this content.
   </body>
 </html>
