--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -4,6 +4,15 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    You are now logged in!
+    
+    <div>
+      <a href="/login">Login</a> |
+      <a href="/register">Register</a> |
+      <a href="/logout">Logout</a> |
+      <a href="/dashboard">Dashboard</a>
+    </div>
+
+    <h2>You are now logged in!</h2>
+    
   </body>
 </html>
