--- a/views/error/unauthorized.html
+++ b/views/error/unauthorized.html
@@ -4,6 +4,15 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    Sorry, you are not authorized to view this content.
+    
+    <div>
+      <a href="/login">Login</a> |
+      <a href="/register">Register</a> |
+      <a href="/logout">Logout</a> |
+      <a href="/dashboard">Dashboard</a>
+    </div>
+
+    <h3>Sorry, you are not authorized to view this content.</h3>
+    
   </body>
 </html>
