--- a/views/error/internal.html
+++ b/views/error/internal.html
@@ -4,6 +4,15 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
-    Internal Server Error -- We'll try to fix this.
+    
+    <div>
+      <a href="/login">Login</a> |
+      <a href="/register">Register</a> |
+      <a href="/logout">Logout</a> |
+      <a href="/dashboard">Dashboard</a>
+    </div>
+
+    <h3>Internal Server Error -- We'll try to fix this.</h3>
+    
   </body>
 </html>
