--- a/views/register.html
+++ b/views/register.html
@@ -4,6 +4,16 @@
     <title>Node.JS Authentication Example</title>
   </head>
   <body>
+
+    <div>
+      <a href="/login">Login</a> |
+      <a href="/register">Register</a> |
+      <a href="/logout">Logout</a> |
+      <a href="/dashboard">Dashboard</a>
+    </div>
+
+    <h2>Register a New Account Here.  Your password must be at least 6 characters.</h2>
+
     <form action="/register" method="post">
       <input type="text" name="email" placeholder="your.email@domain.com" />
       <input type="password" name="password" placeholder="password" />
